--- a/index.html
+++ b/index.html
@@ -44,16 +44,16 @@
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="flex justify-between h-16">
                 <div class="flex items-center">
-                    <a href="#" class="flex items-center space-x-3 group">
+                    <a href="/" class="flex items-center space-x-3 group">
                         <img src="static/images/logo.png" alt="Clyne" class="w-10 h-10 rounded-full transform transition-all duration-300 group-hover:scale-110">
                         <span class="text-xl font-bold bg-gradient-to-r from-gold to-yellow-500 bg-clip-text text-transparent transform transition-all duration-300 group-hover:translate-x-1" data-i18n="cryptonel">Clyne</span>
                     </a>
                 </div>
                 <div class="hidden md:flex items-center space-x-8">
-                    <a href="#features" class="text-gray-300 hover:text-gold transition-all duration-300">Features</a>
-                    <a href="#why-choose-us" class="text-gray-300 hover:text-gold transition-all duration-300">Why Choose Us</a>
-                    <a href="#about" class="text-gray-300 hover:text-gold transition-all duration-300">About</a>
-                    <a href="#contact" class="text-gray-300 hover:text-gold transition-all duration-300">Contact</a>
+                    <a href="/#features" class="text-gray-300 hover:text-gold transition-all duration-300">Features</a>
+                    <a href="/#why-choose-us" class="text-gray-300 hover:text-gold transition-all duration-300">Why Choose Us</a>
+                    <a href="/#about" class="text-gray-300 hover:text-gold transition-all duration-300">About</a>
+                    <a href="/#contact" class="text-gray-300 hover:text-gold transition-all duration-300">Contact</a>
                     <a href="#" onclick="joinSupport()" class="px-6 py-2 bg-gradient-to-r from-gold to-yellow-500 text-black font-semibold rounded-full transition-all duration-300 hover:translate-y-[-2px] hover:scale-105 hover:shadow-lg hover:shadow-gold/30">Support Server</a>
                 </div>
                 <button id="mobile-menu-button" class="md:hidden flex items-center justify-center w-10 h-10">
@@ -80,19 +80,19 @@
             <!-- روابط القائمة -->
             <div class="flex-1 p-4">
                 <div class="space-y-3">
-                    <a href="#features" class="mobile-link">
+                    <a href="/#features" class="mobile-link">
                         <i class="fas fa-star text-gold w-8"></i>
                         <span>Features</span>
                     </a>
-                    <a href="#why-choose-us" class="mobile-link">
+                    <a href="/#why-choose-us" class="mobile-link">
                         <i class="fas fa-check-circle text-gold w-8"></i>
                         <span>Why Choose Us</span>
                     </a>
-                    <a href="#about" class="mobile-link">
+                    <a href="/#about" class="mobile-link">
                         <i class="fas fa-info-circle text-gold w-8"></i>
                         <span>About</span>
                     </a>
-                    <a href="#contact" class="mobile-link">
+                    <a href="/#contact" class="mobile-link">
                         <i class="fas fa-envelope text-gold w-8"></i>
                         <span>Contact</span>
                     </a>
@@ -469,25 +469,25 @@
                 <h3 data-i18n="quickLinks">Quick Links</h3>
                 <ul class="footer-links">
                     <li>
-                        <a href="#features">
+                        <a href="/#features">
                             <i class="fas fa-chevron-right"></i>
                             <span data-i18n="features">Features</span>
                         </a>
                     </li>
                     <li>
-                        <a href="#why-choose-us">
+                        <a href="/#why-choose-us">
                             <i class="fas fa-chevron-right"></i>
                             <span data-i18n="whyChooseUs">Why Choose Us</span>
                         </a>
                     </li>
                     <li>
-                        <a href="#about">
+                        <a href="/#about">
                             <i class="fas fa-chevron-right"></i>
                             <span data-i18n="about">About</span>
                         </a>
                     </li>
                     <li>
-                        <a href="#contact">
+                        <a href="/#contact">
                             <i class="fas fa-chevron-right"></i>
                             <span data-i18n="contact">Contact</span>
                         </a>
@@ -500,13 +500,13 @@
                 <h3 data-i18n="legal">Legal</h3>
                 <ul class="footer-links">
                     <li>
-                        <a href="templates/terms-of-service.html">
+                        <a href="/terms-of-service">
                             <i class="fas fa-gavel"></i>
                             <span data-i18n="termsOfService">Terms of Service</span>
                         </a>
                     </li>
                     <li>
-                        <a href="templates/privacy-policy.html">
+                        <a href="/privacy-policy">
                             <i class="fas fa-shield-alt"></i>
                             <span data-i18n="privacyPolicy">Privacy Policy</span>
                         </a>
