--- a/index.html
+++ b/index.html
@@ -498,20 +498,22 @@
             <!-- Legal -->
             <div class="footer-section">
                 <h3 data-i18n="legal">Legal</h3>
-                <ul class="footer-links">
-                    <li>
-                        <a href="/terms-of-service">
-                            <i class="fas fa-gavel"></i>
-                            <span data-i18n="termsOfService">Terms of Service</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="/privacy-policy">
-                            <i class="fas fa-shield-alt"></i>
-                            <span data-i18n="privacyPolicy">Privacy Policy</span>
-                        </a>
-                    </li>
-                </ul>
+                <div class="footer-links">
+                    <ul>
+                        <li>
+                            <a href="/privacy-policy">
+                                <i class="fas fa-shield-alt"></i>
+                                <span data-i18n="privacyPolicy">Privacy Policy</span>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="/terms-of-service">
+                                <i class="fas fa-gavel"></i>
+                                <span data-i18n="termsOfService">Terms of Service</span>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
             </div>
 
             <!-- Contact Us -->
