--- a/index.html
+++ b/index.html
@@ -501,13 +501,13 @@
                 <div class="footer-links">
                     <ul>
                         <li>
-                            <a href="templates/privacy-policy.html">
+                            <a href="/privacy-policy" onclick="event.preventDefault(); window.location.href='/privacy-policy';">
                                 <i class="fas fa-shield-alt"></i>
                                 <span data-i18n="privacyPolicy">Privacy Policy</span>
                             </a>
                         </li>
                         <li>
-                            <a href="templates/terms-of-service.html">
+                            <a href="/terms-of-service" onclick="event.preventDefault(); window.location.href='/terms-of-service';">
                                 <i class="fas fa-gavel"></i>
                                 <span data-i18n="termsOfService">Terms of Service</span>
                             </a>
