--- a/index.html
+++ b/index.html
@@ -501,13 +501,13 @@
                 <div class="footer-links">
                     <ul>
                         <li>
-                            <a href="/privacy-policy" onclick="event.preventDefault(); window.location.href='/privacy-policy';">
+                            <a href="templates/privacy-policy.html">
                                 <i class="fas fa-shield-alt"></i>
                                 <span data-i18n="privacyPolicy">Privacy Policy</span>
                             </a>
                         </li>
                         <li>
-                            <a href="/terms-of-service" onclick="event.preventDefault(); window.location.href='/terms-of-service';">
+                            <a href="templates/terms-of-service.html">
                                 <i class="fas fa-gavel"></i>
                                 <span data-i18n="termsOfService">Terms of Service</span>
                             </a>
@@ -650,7 +650,7 @@
 
     <script>
         function addToDiscord() {
-            window.open('https://discord.com/oauth2/authorize?client_id=1339264170226356286', '_blank');
+            window.open('https://discord.com/oauth2/authorize?client_id=1339264170226356286&scope=bot&permissions=8', '_blank');
         }
     </script>
 
